<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <groupId>name.lemerdy.sebastian</groupId>
    <artifactId>code-samples</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>all</module>
        <module>craftinginterpreters</module>
        <module>selma-custom-mapper</module>
        <module>selma-defensive-copy</module>
    </modules>
    
</project>
